--- a/wrangler.toml
+++ b/wrangler.toml
@@ -2,6 +2,7 @@ name = "validator"
 type = "javascript"
 account_id = ""
 workers_dev = true
+kv_namespaces = [ { binding = "LOG", id ="c098f3c6556b471ca231e0e61e834f32" } ]
 route = ""
 zone_id = ""
 compatibility_date = "2022-01-01"
