--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -12,3 +12,4 @@ jobs:
         uses: cloudflare/wrangler-action@v3
         with:
           apiToken: ${{ secrets.CF_API_TOKEN }}
+          command: deploy index.js
