--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -12,4 +12,5 @@ jobs:
         uses: cloudflare/wrangler-action@v3
         with:
           apiToken: ${{ secrets.CF_API_TOKEN }}
+          accountId: ${{ secrets.CF_ACID }}
           command: deploy index.js
