--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -12,5 +12,5 @@ jobs:
         uses: cloudflare/wrangler-action@v3
         with:
           apiToken: ${{ secrets.CF_API_TOKEN }}
-          accountId: ${{ secrets.CF_ACID }}
+          accountId: ${{ secrets.CF_ACCOUNT_ID }}
           command: deploy index.js
