--- a/wrangler.toml
+++ b/wrangler.toml
@@ -1,5 +1,5 @@
-name = "validator"
-main = "./src/main.js"
+name = "validev"
+main = "./src/index.ts"
 workers_dev = true
 compatibility_date = "2022-01-01"
 [placement]
