Magic Chess: Go Go

--- a/wrangler.toml
+++ b/wrangler.toml
@@ -1,6 +1,6 @@
-name = "validev"
+name = "validator"
 main = "./src/index.ts"
 workers_dev = true
-compatibility_date = "2022-01-01"
+compatibility_date = "2025-01-01"
 [observability]
 enabled = true
